--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ body{
   background-position: center;
   background-image: url("../images/pigeon-background.JPEG");
   background-color: #DDDDDD;
-  align
+  background-repeat: no-repeat;
+  background-image: center;
+  background-size: cover;
 }
 
 main{
@@ -48,23 +50,35 @@ a{
 
 table{
     border: 2px solid #000000;
+    margin: auto;
+    border-radius: 10px;
 }
 
 .colhead{
-  background-color: #7e0830;
+  background-color: #7e0820;
   color: #FFFFFF;
+  min-width: 125px;
+  padding: 10px;
+  text-align: center; 
+  vertical-align: middle;
+  text-transform: uppercase
 }
 
 .rowhead{
-
+  border-top: 2px solid #000000;
+  border-right: 2px solid #000000;
 }
 
 td{
-  padding: 15px;
+  padding: 10px;
 }
 
-tr{
+tr:nth-child(even) {background: #D1D1D1}
 
+tr:hover {background-color:rgba(126, 8, 32,0.25);}
+
+tr{
+  border-top: 2px solid #000000;
 }
 
 *:focus{
@@ -73,12 +87,28 @@ tr{
   border-color: #417243;
 }
 
-thead tr:first-child th:first-child{}
+thead tr:first-child th:first-child{
+  border-top-left-radius: 10px;
+}
+tbody tr:last-child th:first-child{
+  border-bottom-left-radius: 10px;
+}
+
+thead tr:last-child th:last-child{
+  border-top-right-radius: 10px;
+}
+
+tbody tr:last-child td:last-child{
+  border-bottom-right-radius: 10px;
+}
 
 footer{
   width:100%;
   background:#000000;
   text-align:center;
   color: #FFFFFF;
+  min-height: 75px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
-
