--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,10 @@ table{
 
 td{
   padding: 10px;
+  border-top: 2px solid #000000;
 }
 
-tr:nth-child(even) {background: #D1D1D1}
+tr:nth-child(even) {background: #D1D1D1;}
 
 tr:hover {background-color:rgba(126, 8, 32,0.25);}
 
