--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ padding-top: 15px;
 
 a{
   font-size: 16px;
-  color: #C12258;
+  color: #B21F50;
   text-decoration-line: underline;
   text-decoration-style: wavy;
 }
